src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>CostPrice__c</fullName>
        <description>Cost Price from QLI</description>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date__c</fullName>
        <description>To BaaN:  Customer Request Date</description>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>To BaaN;  Item # (Product Number)</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LOB from QLI</description>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>Lead Time from Quote</description>
        <label>Lead Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Error__c</fullName>
        <description>Used to capture errors on Order Product line item</description>
        <label>Line Item Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Notes__c</fullName>
        <description>Line Notes from QLI</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Text__c</fullName>
        <description>Line Text for communication purposes - remove since we are using Notes</description>
        <label>Line Text (Delete)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Company__c</fullName>
        <globalPicklist>Company_Number</globalPicklist>
        <label>Order Company #</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Product_Validation__c</fullName>
        <description>Order Production Validation</description>
        <formula>AND(
NOT(ISBLANK(Warehouse_Code__c )),
NOT(ISBLANK(Customer_Request_Date__c ))
)</formula>
        <label>Order Product Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <globalPicklist>SBQQ__BillingFrequency</globalPicklist>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <globalPicklist>SBQQ__BillingType</globalPicklist>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <globalPicklist>SBQQ__ChargeType</globalPicklist>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The actual quantity of the product placed in the order.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Determines how the subscription on this line item is priced. Blank value means this line contains product that&apos;s not a subscription.</description>
        <globalPicklist>SBQQ__SubscriptionPricing</globalPicklist>
        <inlineHelpText>Indicates how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Tax amount</description>
        <inlineHelpText>Tax amount</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalAmount__c</fullName>
        <description>Total amount with tax included</description>
        <inlineHelpText>Total amount with tax included</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <description>To BaaN - Warehouse Code</description>
        <formula>Warehouse__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Warehouse</description>
        <label>Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Warehouse Codes - WC</value>
            </filterItems>
            <filterItems>
                <field>SAP_Reference__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Order_Company__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unit_Price_Locked</fullName>
        <active>true</active>
        <description>Unit Price cannot be changed</description>
        <errorConditionFormula>ISCHANGED( UnitPrice )</errorConditionFormula>
        <errorMessage>You cannot change the unit price. For any price deviations, please edit the quote.</errorMessage>
    </validationRules>
</CustomObject>